[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Game/Objects/MusicPlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/Music/gametrack4.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/Music/gametrack8.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/Music/gametrack1.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/Music/gametrack6.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/Music/gametrack7.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/Music/gametrack3.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/Music/gametrack2.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/Music/gametrack5.mp3" type="AudioStream" id=9]

[node name="Player" type="Node"]
script = ExtResource( 1 )

[node name="Track1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Track2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="Track3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Track4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="Track5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="Track6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Track7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Track8" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="finished" from="Track1" to="." method="_on_Track_finished"]
[connection signal="finished" from="Track2" to="." method="_on_Track_finished"]
[connection signal="finished" from="Track3" to="." method="_on_Track_finished"]
[connection signal="finished" from="Track4" to="." method="_on_Track_finished"]
[connection signal="finished" from="Track5" to="." method="_on_Track_finished"]
[connection signal="finished" from="Track6" to="." method="_on_Track_finished"]
[connection signal="finished" from="Track7" to="." method="_on_Track_finished"]
[connection signal="finished" from="Track8" to="." method="_on_Track_finished"]
